syntax = "proto3";

package odin;


// ----------------------
// Unary RPC: Get logs for a single transaction
// ----------------------
service SolanaTxLog {
    // Fetch transaction logs for a given tx_sig (optional)
    rpc GetTxLogs(GetTxRequest) returns (GetTxResponse);

    // Stream logs for all transactions invoking a program address
    rpc StreamProgramLogs(StreamProgramRequest) returns (stream StreamTransactionResponse);
}

// Request for a single transaction logs
message GetTxRequest {
    string rpc_url = 1;       // optional, default to Mainnet Beta
    string tx_sig = 2;        // optional, transaction signature
    bool include_cu_logs = 3; // include compute unit logs
    string filter = 4;        // optional log filter (case-insensitive)
}

// Response for a single transaction logs
message GetTxResponse {
    repeated string logs = 1;                // filtered program log lines
    repeated ComputeUnitLog compute_units = 2; // optional CU logs
    repeated AnchorEvent anchor_events = 3;  // optional Anchor events
    repeated string raw_logs = 4;            // raw unfiltered transaction logs
}

// ----------------------
// Server-side streaming: logs for a program address
// ----------------------
message StreamProgramRequest {
    string rpc_url = 1;          // optional, default Mainnet Beta
    string program_address = 2;  // required, Solana program pubkey
    bool include_cu_logs = 3;    // include compute unit logs
    string filter = 4;           // optional log filter (case-insensitive)
}

// Complete transaction data streamed to the client
message StreamTransactionResponse {
    string signature = 1;                    // transaction signature
    repeated string logs = 2;                // filtered program instruction logs
    repeated ComputeUnitLog compute_units = 3; // optional CU logs
    repeated string raw_logs = 4;            // raw unfiltered transaction logs
    string timestamp = 5;                    // optional timestamp
}

// Compute unit usage per program
message ComputeUnitLog {
    string program_id = 1;
    uint64 consumed = 2;
}

// Anchor event structure (from Anchor programs)
message AnchorEvent {
    string name = 1;   // event name
    string data = 2;   // JSON-encoded event data
}
